[gd_scene load_steps=3 format=3 uid="uid://fu2u1ny2mjak"]

[ext_resource type="Script" path="res://Transition.gd" id="1_u73tp"]
[ext_resource type="Texture2D" uid="uid://cvv40hc5erei2" path="res://Assets/UI/location-icon.png" id="2_yqact"]

[node name="Transition" type="GraphNode" groups=["TRANSITION", "graph_nodes"]]
offset_right = 263.0
offset_bottom = 166.0
mouse_default_cursor_shape = 6
theme_override_constants/separation = 10
title = "NodeTitle"
position_offset = Vector2(340, 291)
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color(1, 1, 1, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
script = ExtResource("1_u73tp")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer2"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
texture = ExtResource("2_yqact")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Change Room/Timeskip"
vertical_alignment = 2

[node name="LocaleContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="LocaleContainer"]
layout_mode = 2
text = "Room_ID: "

[node name="LineEdit" type="LineEdit" parent="LocaleContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Fade Time "

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
text = "0"

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = " Units"

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PersonOption" type="OptionButton" parent="HBoxContainer3"]
visible = false
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "person 1"
popup/item_0/id = 0
popup/item_1/text = "person 2"
popup/item_1/id = 1

[node name="Label" type="Label" parent="HBoxContainer3"]
layout_mode = 2
text = "Person 1:"

[node name="PersonID" type="LineEdit" parent="HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="HBoxContainer5"]
layout_mode = 2
text = "Person 2:"

[node name="PersonID" type="LineEdit" parent="HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="FocusOption" type="OptionButton" parent="HBoxContainer4"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "-dont change focus-"
popup/item_0/id = 0
popup/item_1/text = "focus ON"
popup/item_1/id = 1
popup/item_2/text = "focus OFF"
popup/item_2/id = 2

[connection signal="close_request" from="." to="." method="_on_close_request"]
[connection signal="dragged" from="." to="." method="_on_dragged"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="item_selected" from="HBoxContainer3/PersonOption" to="." method="_on_person_option_item_selected"]
[connection signal="item_selected" from="HBoxContainer4/FocusOption" to="." method="_on_focus_option_item_selected"]
